Fix height of TopNav on small screens

--- a/src/Components/TopNav/styles.less
+++ b/src/Components/TopNav/styles.less
@@ -2,7 +2,7 @@
 
 .topNav {
   width: 100%;
-  height: 50px;
+  min-height: 50px;
   display: flex;
   flex-direction: row;
   align-items: center;
